@@ -7,6 +7,7 @@ import com.twitter.finagle.mux.lease.exp.Lessor
 import com.twitter.finagle.netty3._
 import com.twitter.finagle.pool.SingletonPool
 import com.twitter.finagle.server._
+import com.twitter.finagle.stats.{StatsReceiver, NullStatsReceiver}
 import com.twitter.finagle.tracing._
 import com.twitter.finagle.transport.Transport
 import com.twitter.util.Future
@@ -73,7 +74,8 @@ object Mux extends Client[mux.Request, mux.Response] with Server[mux.Request, mu
       transport: Transport[CB, CB]
     ): Service[mux.Request, mux.Response] with Acting = {
       val param.Stats(sr) = params[param.Stats]
-      new mux.ClientDispatcher(transport, sr)
+      val param.Label(name) = params[param.Label]
+      new mux.ClientDispatcher(name, transport, sr)
     }
   }
 
