@@ -58,5 +58,8 @@ private object TagSet {
         cur
       }
     }
+
+    // for performance
+    override def isEmpty: Boolean = synchronized { bits.isEmpty }
   }
 }
