@@ -4,9 +4,12 @@ import com.twitter.concurrent.AsyncQueue
 import com.twitter.conversions.time._
 import com.twitter.finagle.mux.Message.Treq
 import com.twitter.finagle.mux.lease.exp.{Lessor, nackOnExpiredLease}
+import com.twitter.finagle.stats.{StatsReceiver, InMemoryStatsReceiver}
+import com.twitter.finagle.tracing.NullTracer
 import com.twitter.finagle.transport.{Transport, QueueTransport}
 import com.twitter.finagle.{Path, Dtab, Service}
 import com.twitter.io.{Buf, Charsets}
+import com.twitter.logging.{Logger, BareFormatter, StringHandler, Level}
 import com.twitter.util.{Return, Future, Time, Duration, Promise}
 import org.jboss.netty.buffer.{ChannelBuffers, ChannelBuffer}
 import org.junit.runner.RunWith
@@ -24,7 +27,7 @@ class ServerTest extends FunSuite with MockitoSugar with AssertionsForJUnit {
     val transport = new QueueTransport(writeq=serverToClient, readq=clientToServer)
     val service = mock[Service[Request, Response]]
     val lessor = mock[Lessor]
-    val server = new ServerDispatcher(transport, service, true, lessor)
+    val server = new ServerDispatcher(transport, service, true, lessor, NullTracer)
 
     def issue(lease: Duration) {
       val m = serverToClient.poll()
@@ -137,7 +140,7 @@ class ServerTest extends FunSuite with MockitoSugar with AssertionsForJUnit {
       .thenReturn(Future.value(encodedMsg))
       .thenReturn(Future.never)
 
-    val dispatcher = new ServerDispatcher(trans, svc, true, lessor)
+    val dispatcher = new ServerDispatcher(trans, svc, true, lessor, NullTracer)
     assert(dispatcher.npending() === 1)
 
     // fulfill the promise with a failure
@@ -156,10 +159,16 @@ class ServerTest extends FunSuite with MockitoSugar with AssertionsForJUnit {
 
       val p = Promise[Response]
       var req: Request = null
-      val server = new ServerDispatcher(transport, Service.mk { _req: Request =>
-        req = _req
-        p
-      }, true)
+      val server = new ServerDispatcher(
+        transport,
+        Service.mk { _req: Request =>
+          req = _req
+          p
+        },
+        true,
+        Lessor.nil,
+        NullTracer
+      )
 
       clientToServer.offer(encode(Tdispatch(0, Seq.empty, Path.empty, Dtab.empty, buf)))
       // one outstanding request
@@ -188,7 +197,7 @@ class ServerTest extends FunSuite with MockitoSugar with AssertionsForJUnit {
         val p = Promise[Response]()
         promises ::= p
         p
-      }, true)
+      }, true, Lessor.nil, NullTracer)
 
       clientToServer.offer(encode(
         Tdispatch(0, Seq.empty, Path.empty, Dtab.empty, ChannelBuffers.EMPTY_BUFFER)))
@@ -226,7 +235,7 @@ class ServerTest extends FunSuite with MockitoSugar with AssertionsForJUnit {
 
       val server = new ServerDispatcher(transport, Service.mk { _: Request =>
         Future { ??? }
-      }, true)
+      }, true, Lessor.nil, NullTracer)
 
       val drain = server.close(Time.Top) // synchronously sends drain request to client
 
@@ -239,39 +248,104 @@ class ServerTest extends FunSuite with MockitoSugar with AssertionsForJUnit {
     }
   }
 
+  class Server(svc: Service[Request, Response]) {
+    val serverToClient = new AsyncQueue[ChannelBuffer]
+    val clientToServer = new AsyncQueue[ChannelBuffer]
+    val transport = new QueueTransport(writeq=serverToClient, readq=clientToServer)
+
+    val server = new ServerDispatcher(
+      transport,
+      svc,
+      true,
+      Lessor.nil,
+      NullTracer
+    )
+
+    def request(req: ChannelBuffer): Unit = clientToServer.offer(req)
+    def read(): Future[ChannelBuffer] = serverToClient.poll
+  }
+
   test("starts nacking only after receiving an rdrain") {
     Time.withCurrentTimeFrozen { ctl =>
       import Message._
-      val serverToClient = new AsyncQueue[ChannelBuffer]
-      val clientToServer = new AsyncQueue[ChannelBuffer]
-      val transport = new QueueTransport(writeq=serverToClient, readq=clientToServer)
 
-      val server = new ServerDispatcher(transport, Service.mk { req: Request =>
+      val server = new Server(Service.mk { req: Request =>
         Future.value(Response.empty)
-      }, true)
+      })
 
-      clientToServer.offer(Message.encode( // request before closing
+      server.request(Message.encode( // request before closing
         Message.Tdispatch(0, Seq.empty, Path.empty, Dtab.empty, ChannelBuffers.EMPTY_BUFFER)))
-      assert(serverToClient.poll.isDefined)
+      assert(server.read().isDefined)
 
-      val drain = server.close(Time.Top) // synchronously sends drain request to client
+      val drain = server.server.close(Time.Top) // synchronously sends drain request to client
 
-      val Some(Return(tdrain)) = serverToClient.poll.poll
+      val Some(Return(tdrain)) = server.read().poll
       val Tdrain(tag) = Message.decode(tdrain)
 
-      clientToServer.offer(Message.encode( // request after sending tdrain, before getting rdrain
+      server.request(Message.encode( // request after sending tdrain, before getting rdrain
         Message.Tdispatch(0, Seq.empty, Path.empty, Dtab.empty, ChannelBuffers.EMPTY_BUFFER)))
-      assert(serverToClient.poll.isDefined)
+      assert(server.read().isDefined)
 
       assert(!drain.isDefined) // client hasn't acked
-      clientToServer.offer(encode(Rdrain(tag))) // client draining
+      server.request(encode(Rdrain(tag))) // client draining
 
       assert(drain.isDefined) // safe to shut down
 
-      clientToServer.offer(Message.encode( // request after closing down
+      server.request(Message.encode( // request after closing down
         Message.Tdispatch(0, Seq.empty, Path.empty, Dtab.empty, ChannelBuffers.EMPTY_BUFFER)))
-      val Some(Return(rdrain)) = serverToClient.poll.poll
+      val Some(Return(rdrain)) = server.read().poll
       assert(decode(rdrain).isInstanceOf[RdispatchNack])
+    }
+  }
+
+  test("logs while draining") {
+    Time.withCurrentTimeFrozen { ctl =>
+      import Message._
+
+      val log = Logger.get("")
+      val handler = new StringHandler(BareFormatter, None)
+      log.setLevel(Level.DEBUG)
+      log.addHandler(handler)
+
+      var accumulated: String = ""
+      val started = "Started draining a connection\n"
+      val finished = "Finished draining a connection\n"
+
+      val p = Promise[Response]
+      val server1 = new Server(Service.mk { buf: Request =>
+        p
+      })
+      val server2 = new Server(Service.mk { buf: Request =>
+        Future.value(Response.empty)
+      })
+      server1.request(Message.encode( // request before closing
+        Message.Tdispatch(0, Seq.empty, Path.empty, Dtab.empty, ChannelBuffers.EMPTY_BUFFER)))
+
+      assert(handler.get === accumulated)
+
+      server2.server.close(Time.Top) // synchronously sends drain request to client2
+
+      accumulated += started
+      assert(handler.get === accumulated)
+
+      server2.request(encode(Rdrain(1))) // client draining, 0 outstanding
+
+      accumulated += finished
+      assert(handler.get === accumulated)
+
+      server1.server.close(Time.Top) // synchronously sends drain request to client1
+
+      accumulated += started
+      assert(handler.get === accumulated)
+
+      server1.request(encode(Rdrain(1))) // client draining, one still outstanding
+
+      assert(handler.get === accumulated)
+
+      p.setValue(Response.empty)
+
+      accumulated += finished
+      assert(handler.get === accumulated)
     }
   }
 }
